crates/python_parser/tests/snapshots/invalid_syntax@match_classify_as_keyword.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/err/match_classify_as_keyword.py
---
## AST

```
Module(
    ModModule {
        range: 0..33,
        body: [
            Match(
                MatchStmt {
                    range: 0..32,
                    subject: Yield(
                        YieldExpr {
                            range: 6..15,
                            value: Some(
                                Name(
                                    NameExpr {
                                        range: 12..15,
                                        id: Name("foo"),
                                        ctx: Load,
                                    },
                                ),
                            ),
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 21..32,
                            pattern: MatchAs(
                                PatternMatchAs {
                                    range: 26..27,
                                    pattern: None,
                                    name: None,
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    ExprStmt {
                                        range: 29..32,
                                        value: EllipsisLiteral(
                                            EllipsisLiteralExpr {
                                                range: 29..32,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | match yield foo:
  |       ^^^^^^^^^ Syntax Error: Yield expression cannot be used here
2 |     case _: ...
  |
